provarAnt/00D190000000ZY2EAM/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ATC DMD</fullName>
        <description>DMD Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>AF Work In Progress</fullName>
        </values>
        <values>
            <fullName>Awaiting AF</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Awaiting HTML5</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Creative Brief</fullName>
        </values>
        <values>
            <fullName>Design Complete</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>QA Complete</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ATC Dealer Sales</fullName>
        <description>ATC Dealer Sales support process - Credit Processing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales Information</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ATC Dealer Service</fullName>
        <description>Used by ATC Dealer Service Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Awaiting IT</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ATC Dealer Service - HomeNet</fullName>
        <description>Used to issue and resolution regarding HomeNet</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ATG Order Activity</fullName>
        <description>Used by Order Fulfillment Service Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting BBT</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Inventory</fullName>
        </values>
        <values>
            <fullName>Awaiting Re-entry</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Awaiting eQS%2FArtwork</fullName>
        </values>
        <values>
            <fullName>Awaiting speed Shift Media</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold-System Downtime</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ATG Order Entry</fullName>
        <description>Used by Order Entry Service Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Inventory</fullName>
        </values>
        <values>
            <fullName>Awaiting Re-entry</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales Information</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Awaiting eQS%2FArtwork</fullName>
        </values>
        <values>
            <fullName>Awaiting speed Shift Media</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold-System Downtime</fullName>
        </values>
        <values>
            <fullName>QA Complete</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General</fullName>
        <description>Core Service ATG support process for BU-agnostic users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>QA Complete</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TIM BuyBook Tech</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Delivery</fullName>
        </values>
        <values>
            <fullName>Awaiting IT</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal</fullName>
        </values>
        <values>
            <fullName>Awaiting Sales</fullName>
        </values>
        <values>
            <fullName>Awaiting Third-Party</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Work In Progress</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AF_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Error__c</fullName>
        <label>AF Error</label>
        <picklist>
            <picklistValues>
                <fullName>Co-op Compliancy Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Use Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Size Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions Not Followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo Not Changed on All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Quality Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Qualifying Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spelling Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Image Format</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Product Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ARA_Addendums__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARA/Addendums</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATC_Case_Direction__c</fullName>
        <label>Case Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Case_Reason__c</fullName>
        <label>ATC Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDG Customer Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDG Customer Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op - Dealer Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB Ops - Dealer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB Ops - Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB Showcase Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Service Related (Call Routing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In Marketplace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Channel__c</fullName>
        <inlineHelpText>Who is this case for?</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Co_op__c</fullName>
        <description>Used to identify if an email was sent to an ATC co-op email address.  Set manually or by Workflow from inbound email.</description>
        <label>Co-op?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Contact_Email__c</fullName>
        <formula>ATC_Contact__r.Email</formula>
        <label>ATC Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC_Contract_Sys_ID__c</fullName>
        <formula>Contract__r.ATC_Contract_Sys_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESO Contract Sys ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_One_and_Done__c</fullName>
        <label>One and Done</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Order_Sys_ID__c</fullName>
        <formula>Contract__r.ATC_Order_Sys_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESO Order Sys ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT/KBB Combo Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT/KBB New Car Bundle PIlot 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT/KBB Special Bundles 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC iPad App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobiography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader Managed Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW CPO Discount Re-entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARFAX/Experian AutoCheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Call Record Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Connections Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - New Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - New Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Overdrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Skyscraper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Trade In Marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Used Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Used Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Ads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ATC Product related to this issue.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>An ATC Product by that name does not exist.</errorMessage>
            <filterItems>
                <field>Product2.Product_BU__c</field>
                <operation>equals</operation>
                <value>ATC Media</value>
            </filterItems>
            <infoMessage>This search will only lookup ATC Media products.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATC_Reject_Details__c</fullName>
        <inlineHelpText>Why the rework was rejected.</inlineHelpText>
        <label>Reject Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <picklist>
            <controllingField>ATC_Rework_Approval_Status__c</controllingField>
            <picklistValues>
                <fullName>Instructions not followed/Incomplete changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spelling/text errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphical errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click tag not added/updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flight failed/Flighting in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative name not updated for Flash files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect click-thru URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op/OEM brand guidelines not followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not proactive, did not update additional graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB liners not updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Ad tag/Ad tag format for make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op not turned On/off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Resolution_Category__c</fullName>
        <description>Dependent on ATC case subtype</description>
        <label>Resolution Category</label>
        <picklist>
            <picklistValues>
                <fullName>Account updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domains Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Updates Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Info Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login/Password Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Rework_Approval_Status__c</fullName>
        <label>Rework Approval Status</label>
        <picklist>
            <controllingField>ATC_Co_op__c</controllingField>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Root_Cause_Temp__c</fullName>
        <label>ATC Root Cause</label>
        <picklist>
            <controllingField>ATC_Sub_Reason__c</controllingField>
            <picklistValues>
                <fullName>120 Day Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Day Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCi Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCi Audit request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account missing - CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account missing - Fast Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Name Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account restricted/ Restriction removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Review/Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Support - Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/setup Co-Op CBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All logins and password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Graphic Changes – Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt to secure payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bait and Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance requested / Invoice Question / Payment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Videos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Exception Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Relationship – Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Relationship – End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book of Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Title</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Sales_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if Sales need to approve the rework before going to QA.</description>
        <inlineHelpText>Check this box if Sales need to approve the rework before going to QA.</inlineHelpText>
        <label>Sales Approval Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATC_Sub_Reason__c</fullName>
        <description>Dependent on case reason</description>
        <label>ATC Sub Reason</label>
        <picklist>
            <controllingField>ATC_Case_Reason__c</controllingField>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHPH Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOX Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARFAX/Experian AutoCheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified/OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Site Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-OP Related Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit and Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit and Collections - Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service/Sales Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group - Major Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group - Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Support Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Related Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Co-Op Inquiries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Subtype__c</fullName>
        <label>ATC Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud &amp; Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Service Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>